# extremetuxracer

./: NEWS  PKGBUILD  configure.ac  version.rc
data/: credits.lst
data/courses/default/chinese_wall/: course.dim
data/courses/default/chragis_gagiwaetter/: course.dim
data/courses/default/explore_mountains/: course.dim
data/courses/default/holygrail/: course.dim
data/courses/default/keep_country_tidy/: course.dim
data/courses/default/milos_castle/: course.dim
data/courses/default/path_of_daggers/: course.dim
data/courses/default/penguins_cant_fly/: course.dim
data/courses/default/secret_valleys/: course.dim
data/courses/default/tux_at_home/: course.dim
data/courses/default/wild_mountains/: course.dim
data/translations/: Makefile.am  cs_CZ.lst  es_ES.lst  fi_FI.lst  fr_FR.lst  it_IT.lst  languages.lst  pt_PT.lst  xx_XX.lst
doc/: code
resources/: Makefile.am  org.etr.metainfo.xml
src/: audio.cpp  bh.h  common.cpp  common.h  config_screen.cpp  credits.cpp  event.cpp  event_select.cpp  font.cpp  game_config.cpp  game_over.cpp  game_type_select.cpp  gui.cpp  loading.cpp  main.cpp  newplayer.cpp  ogl_test.cpp  particles.cpp  paused.cpp  race_select.cpp  racing.cpp  regist.cpp  score.cpp  splash_screen.cpp  states.cpp  textures.cpp  tool_char.cpp  tool_frame.cpp  translation.cpp  version.h  winsys.cpp  winsys.h
