
SUBDIRS = gui

metainfofiledir = $(prefix)/share/metainfo
desktopfiledir = $(prefix)/share/applications
icondir = $(prefix)/share/pixmaps

metainfofile_DATA =	\
	org.etr.metainfo.xml

desktopfile_DATA =	\
        org.etr.desktop

icon_DATA =		\
	etr.png		\
	etr.svg

EXTRA_DIST = 		\
	banner.bmp	\
	dialog.bmp	\
	etracericon.ico	\
	org.etr.metainfo.xml	\
	etr.svg	        \
	org.etr.desktop	\
	etr.png
